# trader

./: .env.example  .gitignore  AGETNTS.md  README.md  pyproject.toml
.github/workflows/: deploy-workshop.yml
architecture/: generate_architecture.py
deploy/agentcore/: .env.example  prepare_project.ps1  pyproject.agentcore.toml  requirements.txt  runtime.py
frontend/src/: styles.css
src/trader/: __init__.py  __main__.py  accounts.py  agents.py  api.py  config.py  database.py  floor.py  market.py  prompts.py  research_server.py  tools.py  ui.py
tests/: test_accounts.py  test_agent_as_tool.py  test_api.py  test_cloud_support.py  test_tools.py
workshop/: README.md  config.toml
workshop/content/en/: _index.md
workshop/content/en/1-overview/: 1.1-architecture.md  _index.md
workshop/content/en/2-prerequisites/: 2.1-requirements.md  2.2-install.md  _index.md
workshop/content/en/3-local-workflow/: 3.1-run-local.md  3.2-safety-boundary.md  _index.md
workshop/content/en/4-agentcore-runtime/: 4.1-cloud-config.md  4.2-deploy.md  4.3-invoke.md  _index.md
workshop/content/en/5-cloud-integration/: 5.1-gateway-identity.md  5.2-dashboard.md  5.3-observability.md  _index.md
workshop/content/en/6-validation/: _index.md
workshop/content/en/7-cleanup/: _index.md
workshop/content/vi/: _index.md
workshop/layouts/partials/: logo.html  menu-footer.html  menu.html
workshop/layouts/shortcodes/: download.html  workshop-image.html
workshop/static/css/: theme-workshop.css
workshop/static/images/: strands-trader-agentcore.drawio
(+20 files in other folders)
