[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-trader"
version = "0.2.0"
description = "Autonomous multi-trader simulation powered by Strands Agents"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.0",
    "fastapi>=0.139.0",
    "gradio>=6.14.0",
    "massive>=2.8.0",
    "pandas>=2.3.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.0",
    "requests>=2.33.0",
    "strands-agents[openai]>=1.43.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.12"]

[project.scripts]
trader = "trader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
